# sykofizz

./: .dockerignore  .gitignore  .gitlab-ci.yml  .replit  .rtx.toml  CHANGELOG.md  Dockerfile  Makefile  README.md  bun.lockb  composer.json  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  flake.nix  manage.py  migrations.json  mix.exs  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.nix  svelte.config.js  tailwind.config.js
.github/workflows/: backend.yml  ci-cd.yml  docker-CI.yml  docker-ci-cd.yml  frontend.yml  publish-web.yml  publish-web.yml.bak  (+1 more)
api/: .gitignore  bun.lockb  package.json  wrangler.toml
backend/: .gitignore  Dockerfile  Dockerfile.acceptance  Makefile  constraints.txt  instance.yaml  mx.ini  pyproject.toml
cms/: Dockerfile  README.md  bun.lockb  db.sqlite3
config/: application.php  config.exs  dev.exs  prod.exs  runtime.exs  test.exs
devops/: .env_dist  Makefile  README-GHA.md  README-GITLAB.md  README.md
docker-compose/: docker-compose.yaml
epoch/: apps.py  context_processors.py  models.py
frontend/: .eslintignore  .gitignore  .prettierignore  Dockerfile  Makefile  astro.config.mjs  bun.lockb  mrs.developer.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
home/: models.py
landing-pages/: README.md  bun.lockb  composer.json  package-lock.json  package.json
lib/: sykofizz.ex  sykofizz_web.ex
sykofizz/: api.py  asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
test/: test_helper.exs
wagtail-old/: package.json  requirements.txt
(+130 files in other folders)
